<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.appxi</groupId>
    <artifactId>dictionary-app-packager</artifactId>
    <version>24.04.15</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>18</maven.compiler.release>

        <ext.nonMods>${project.build.directory}/jpacktool/jar</ext.nonMods>
        <ext.nonMods.lib>${project.build.directory}/jpacktool/jar/${project.version}</ext.nonMods.lib>
        <ext.module>appxi.dictionary/org.appxi.dictionary.app.AppLauncher</ext.module>
        <ext.jvmArgs>-Djpackage.app-dir=$APPDIR -XX:+UseG1GC -XX:+UseStringDeduplication -Dfile.encoding=UTF-8 --add-opens=javafx.web/javafx.scene.web=appxi.javafx --add-exports=javafx.web/com.sun.webkit=appxi.javafx --add-exports=javafx.web/com.sun.webkit.event=appxi.javafx --add-exports=javafx.web/com.sun.javafx.webkit=appxi.javafx --add-opens=javafx.graphics/com.sun.javafx.font=appxi.javafx -p $APPDIR/${project.version}</ext.jvmArgs>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.appxi</groupId>
            <artifactId>dictionary-app</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>net.agilhard.maven.plugins</groupId>
                        <artifactId>jlink-jpackager-maven-plugin</artifactId>
                        <version>1.0.0-SNAPSHOT</version>
                        <extensions>true</extensions>
                        <configuration>
                            <verbose>true</verbose>
                            <noHeaderFiles>true</noHeaderFiles>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <compress>2</compress>
                            <!--   /////////////////////////////////////////////////////////////////  -->
                            <vendor>AppXI</vendor>
                            <name>smartWords</name>
                            <description>smartWords ! the Smart Dictionary</description>
                            <identifier>appxi.smartWords</identifier>
                            <icon>app.ico</icon>
                            <installDir>smartWords</installDir>
                            <module>${ext.module}</module>
                            <jvmArgs><jvmArg>${ext.jvmArgs}</jvmArg></jvmArgs>
                            <outputDirectoryAutomaticJars>${ext.nonMods.lib}</outputDirectoryAutomaticJars>
                            <outputDirectoryClasspathJars>${ext.nonMods.lib}</outputDirectoryClasspathJars>
                            <inputDirectoryPackage>${ext.nonMods}</inputDirectoryPackage>
                            <packagingResources>
                                <resources>
                                    <resource>
                                        <directory>${project.basedir}/../../appxi-dictionary.dd</directory>
                                        <targetPath>dict</targetPath>
                                    </resource>
                                    <resource>
                                        <directory>${project.basedir}/../../appxi-javafx/repo/web-incl</directory>
                                        <targetPath>template/web-incl</targetPath>
                                    </resource>
                                </resources>
                            </packagingResources>
                            <!--   /////////////////////////////////////////////////////////////////  -->
                            <packageType>msi</packageType>
                            <windowsOptions>
                                <windowsType>msi</windowsType>
                                <dirChooser>false</dirChooser>
                                <perUserInstall>true</perUserInstall>
                                <console>false</console>
                                <menu>true</menu>
                                <shortcut>true</shortcut>
                                <upgradeUUID>0D713134-8256-3C7E-BBCF-CC08EB76ABEC</upgradeUUID>
                            </windowsOptions>
                            <resourceDir>${project.basedir}/win</resourceDir>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>net.agilhard.maven.plugins</groupId>
                        <artifactId>jlink-jpackager-maven-plugin</artifactId>
                        <version>1.0.0-SNAPSHOT</version>
                        <extensions>true</extensions>
                        <configuration>
                            <verbose>true</verbose>
                            <noHeaderFiles>true</noHeaderFiles>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <compress>2</compress>
                            <!--   /////////////////////////////////////////////////////////////////  -->
                            <vendor>AppXI</vendor>
                            <name>smartWords</name>
                            <description>smartWords ! the Smart Dictionary</description>
                            <identifier>appxi.smartWords</identifier>
                            <icon>app.icns</icon>
                            <installDir>/Applications</installDir>
                            <module>${ext.module}</module>
                            <jvmArgs><jvmArg>${ext.jvmArgs}</jvmArg></jvmArgs>
                            <outputDirectoryAutomaticJars>${ext.nonMods.lib}</outputDirectoryAutomaticJars>
                            <outputDirectoryClasspathJars>${ext.nonMods.lib}</outputDirectoryClasspathJars>
                            <inputDirectoryPackage>${ext.nonMods}</inputDirectoryPackage>
                            <packagingResources>
                                <resources>
                                   <resource>
                                       <directory>${project.basedir}/../../appxi-dictionary.dd</directory>
                                       <targetPath>dict</targetPath>
                                   </resource>
                                    <resource>
                                        <directory>${project.basedir}/../../appxi-javafx/repo/web-incl</directory>
                                        <targetPath>template/web-incl</targetPath>
                                    </resource>
                                </resources>
                            </packagingResources>
                            <!--   /////////////////////////////////////////////////////////////////  -->
                            <packageType>dmg</packageType>
                            <macOptions>
                                <macType>dmg</macType>
                                <bundleName>Smart Dictionary</bundleName>
                                <bundleIdentifier>appxi.smartWords</bundleIdentifier>
                            </macOptions>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>